--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "jshint-lib": "jshint lib",
     "jshint-test": "jshint test",
     "start": "./bin/mosca -v | bunyan",
-    "bundle": "browserify -r mqtt -s mqtt | uglifyjs --screw-ie8 > public/mqtt.js",
+    "bundle": "browserify -r mqtt -s mqtt | uglifyjs --screw-ie8 > public/mqtt.js"
   },
   "pre-commit": [
     "jshint-lib",
